<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.waynehfut.easyconnect.EasyConnectActivity"
    android:id="@+id/new_pub">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/topic"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/pub_topic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:hint="@string/topicHint"
                    android:textSize="15dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/message"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/pub_context"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:hint="@string/messageHint"
                    android:textSize="15dp"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/qos"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>



                <RadioGroup
                    android:id="@+id/qosRadio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    >

                    <RadioButton
                        android:id="@+id/qos0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/qos0"

                        />

                    <RadioButton
                        android:id="@+id/qos1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qos1" />

                    <RadioButton
                        android:id="@+id/qos2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qos2" />
                </RadioGroup>
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/isRetained"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/retained"
                    android:textColor="#888888"
                    android:textSize="7pt" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/verifyYesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/done_white" />

</android.support.design.widget.CoordinatorLayout>
